Chapter 6: Modeling users

--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-/.vscode/*
+.vscode/launch.json
+.vscode/settings.json
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
