--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,9 +6,15 @@ validate:
       maxlength: 150
     password:
       maxlength: 6
+  micropost:
+    content:
+      maxlength: 140
 user_helper:
   size_gravatar: 150
 user:
   size_gravatar: 80
   size_gravatar_all: 50
 per_page: 10
+picture_size: 5
+picture_width: 50
+picture_height: 50
