--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,6 +14,7 @@ user_helper:
 user:
   size_gravatar: 80
   size_gravatar_all: 50
+  hours_ago: 2
 per_page: 10
 picture_size: 5
 picture_width: 50
